--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html
@@ -36,7 +36,7 @@
         <p>
             Handles the logic for ledge climbing, allowing customization of conditions.
             <br> <br>
-            In alignment with the Ledge Grab configuration in the '<a class="redirect-link" href="#">CharacterEnvironmentalQuery</a>' component, the '<b>LedgeClimb();</b>'
+            In alignment with the Ledge Grab configuration in the '<a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>' component, the '<b>LedgeClimb();</b>'
             method operates similarly to '<a class="redirect-link" href="ledge-grab.html">LedgeGrab();</a>'. When a ledge is detected, your character gains the ability to climb it.
             You can trigger automatic ledge climbing by invoking the function without passing any parameters, or by defining a custom condition, such as a player's key
             press. Much like the ledge grab mechanic, you can fine-tune the behaviour of the ledge climb mechanic by adjusting the settings of the
