--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-PROPERTIES/ledge-detected.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-PROPERTIES/ledge-detected.html
@@ -28,7 +28,7 @@
             Indicates whether a ledge is currently detected.
             <br> <br>
             This property signals the detection of a ledge in the environment. When the character is in proximity to a ledge, it will return <b>true</b>. Further details on how
-            ledge detection is accomplished can be explored in the <a class="redirect-link" href="#">CharacterEnvironmentalQuery</a> component.
+            ledge detection is accomplished can be explored in the <a class="redirect-link" href="../../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a> component.
             <br> <br>
             If you need to access this property through a class that inherits from <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>, you can do
             so directly. Alternatively, if you intend to access it from an external script, you need to reference the corresponding controller instance and access it accordingly.
