--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -70,6 +70,32 @@
                 </tr>
             </table>
         </div>
+
+        <div class="table-division">
+            <span class="table-title">General</span>
+            <table>
+                <tr>
+                    <td class="label">CharacterEnvironmentalQuery</td>
+                    <td><a class="redirect-link" href="#">Manual</a></td>
+                    <td><a class="redirect-link" href="SCRIPTING/ENV-QUERY/env-quey.html">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">CharacterAnimator</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">Utilities</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">DashEffect</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+            </table>
+        </div>
     </div>    
 </body>
 </html>
