--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
@@ -67,7 +67,7 @@ public class Example : <a class="redirect-link" href="../humanoid-controller.htm
         base.Update();
 
         bool floorSlideKey = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKey.html">Input.GetKey</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.DownArrow.html">Keycode.DownArrow</a>);
-        TryFloorSlide(floorSlideKey);
+        <b>TryFloorSlide</b>(floorSlideKey);
     }
 }
 
