--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/EVENTS/on-ledge-climb-enter.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/EVENTS/on-ledge-climb-enter.html
@@ -43,7 +43,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
     
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
     {
-        m_HumanoidController.OnLedgeClimbEnter += HumanoidController_OnLedgeClimbEnter;
+        m_HumanoidController.<b>OnLedgeClimbEnter</b> += HumanoidController_OnLedgeClimbEnter;
 
         // Exercise caution when subscribing to events. If you plan to initialize 'm_HumanoidController' within the 'Awake' function,
         // ensure that the event subscription takes place in the 'Start' method instead.
