--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/change-horizontal-velocity.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/change-horizontal-velocity.html
@@ -54,7 +54,7 @@ public class Example : <a class="redirect-link" href="../humanoid-controller.htm
     {
         base.Update();
         <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html">Vector2</a> moveDirection = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetAxis.html">Input.GetAxis</a>("Horizontal");
-        ChangeHorizontalVelocity(moveDirection);
+        <b>ChangeHorizontalVelocity</b>(moveDirection);
     }
 }
 </pre>
