--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/flip-character.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/flip-character.html
@@ -51,7 +51,7 @@ public class Example : <a class="redirect-link" href="../humanoid-controller.htm
         base.Update();
 
         float horizontalInput = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetAxis.html">Input.GetAxis</a>("Horizontal");
-        FlipCharacter(horizontalInput);
+        <b>FlipCharacter</b>(horizontalInput);
     }
 }
 </pre>
