--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-grab.html
@@ -58,7 +58,7 @@ public class Example : <a class="redirect-link" href="../humanoid-controller.htm
         float moveDirection = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform-right.html">transform.right</a>.x;
         bool canLedgeGrab = horizontalInput * moveDirection > 0;
 
-        LedgeGrab(canLedgeGrab);
+        <b>LedgeGrab</b>(canLedgeGrab);
     }
 }
 </pre>
