--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-jumping.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-jumping.html
@@ -63,7 +63,7 @@ public class Example : <a class="redirect-link" href="../humanoid-controller.htm
 
         if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Space</a>))
         {
-            TryJumping();
+            <b>TryJumping</b>();
         }
     }
 }
@@ -89,7 +89,7 @@ public class Example : <a class="redirect-link" href="../humanoid-controller.htm
         {
             if (!characterCombat.IsAttacking)
             {
-                TryJumping();
+                <b>TryJumping</b>();
             }
         }
     }
